@@ -1,95 +1,83 @@
 import io.geekya215.lamination.Block;
 import org.junit.jupiter.api.Test;
 
+import static io.geekya215.lamination.Constants.KB;
+import static io.geekya215.lamination.Constants.SIZE_OF_U16;
 import static org.junit.jupiter.api.Assertions.*;
 
 public class BlockTest {
+    @Test
+    void testBuildBlockWithSingleKey() {
+        Block.BlockBuilder blockBuilder = new Block.BlockBuilder(16);
+        boolean putSuccess = blockBuilder.put("hello".getBytes(), "world".getBytes());
+        assertTrue(putSuccess);
+        blockBuilder.build();
+    }
+
+    @Test
+    void testBuildBlockWithFull() {
+        Block.BlockBuilder blockBuilder = new Block.BlockBuilder(16);
+        assertTrue(blockBuilder.put("1".getBytes(), "11".getBytes()));
+        assertFalse(blockBuilder.put("2".getBytes(), "22".getBytes()));
+        blockBuilder.build();
+    }
+
+    @Test
+    void testBuildBlockWithLargeKVPair() {
+        Block.BlockBuilder blockBuilder = new Block.BlockBuilder(16);
+        assertTrue(blockBuilder.put("1".getBytes(), "1".repeat(100).getBytes()));
+        blockBuilder.build();
+    }
+
     byte[] keyOf(int i) {
-        return String.format("key_%03d", i * 5).getBytes();
+        return "key_%03d".formatted(i * 5).getBytes();
     }
 
     byte[] valueOf(int i) {
-        return String.format("value_%010d", i).getBytes();
-    }
-
-    @Test
-    void testBuildEmptyBlock() {
-        Block.BlockBuilder builder = new Block.BlockBuilder(16);
-        assertThrows(IllegalStateException.class, builder::build);
-    }
-
-    @Test
-    void testBuildBlockWithLargeKey() {
-        Block.BlockBuilder builder = new Block.BlockBuilder(16);
-        assertThrows(IllegalArgumentException.class, () -> builder.put("114514".getBytes(), "1919810".getBytes()));
-    }
-
-    @Test
-    void testBuildBlockWithSingleKey() {
-        Block.BlockBuilder builder = new Block.BlockBuilder(16);
-        assertTrue(builder.put("22".getBytes(), "33".getBytes()));
-        builder.build();
-    }
-
-    @Test
-    void testBuildBlockFull() {
-        Block.BlockBuilder builder = new Block.BlockBuilder(16);
-        assertTrue(builder.put("22".getBytes(), "33".getBytes()));
-        assertFalse(builder.put("22".getBytes(), "33".getBytes()));
-        builder.build();
+        return "value_%010d".formatted(i).getBytes();
     }
 
     Block generateBlock() {
-        Block.BlockBuilder builder = new Block.BlockBuilder(10000);
+        Block.BlockBuilder blockBuilder = new Block.BlockBuilder(10 * KB);
         for (int i = 0; i < 100; i++) {
-            byte[] key = keyOf(i);
-            byte[] value = valueOf(i);
-            assertTrue(builder.put(key, value));
+            assertTrue(blockBuilder.put(keyOf(i), valueOf(i)));
         }
-
-        return builder.build();
+        return blockBuilder.build();
     }
 
     @Test
-    void testBlockBuildAll() {
+    void testBuildAll() {
         generateBlock();
     }
 
     @Test
-    void testBlockEncode() {
+    void testEncodeBlock() {
         Block block = generateBlock();
-        block.encode();
+        byte[] buf = block.encode();
+        assertEquals(block.data().length + block.offsets().length * SIZE_OF_U16 + SIZE_OF_U16, buf.length);
     }
 
     @Test
-    void testBlockDecode() {
+    void testDecodeBlock() {
         Block block = generateBlock();
-        byte[] encode = block.encode();
-        Block decodeBlock = Block.decode(encode);
-        assertArrayEquals(block.getOffsets(), decodeBlock.getOffsets());
-        assertArrayEquals(block.getData(), decodeBlock.getData());
+        byte[] buf = block.encode();
+        Block decodedBlock = Block.decode(buf);
+        assertArrayEquals(block.data(), decodedBlock.data());
+        assertArrayEquals(block.offsets(), decodedBlock.offsets());
     }
 
     @Test
     void testBlockIterator() {
         Block block = generateBlock();
         Block.BlockIterator iter = Block.BlockIterator.createAndSeekToFirst(block);
-        int i = 0;
-        while (iter.isValid()) {
-            byte[] key = iter.key();
-            byte[] value = iter.value();
-            assertArrayEquals(keyOf(i), key);
-            assertArrayEquals(valueOf(i), value);
-            iter.next();
-            i++;
-        }
-
-        for (int j = 0; j < 100; j++) {
-            iter.seekTo(j);
-            byte[] key = iter.key();
-            byte[] value = iter.value();
-            assertArrayEquals(keyOf(j), key);
-            assertArrayEquals(valueOf(j), value);
+        for (int i = 0; i < 5; i++) {
+            for (int j = 0; j < 100; j++) {
+                assertTrue(iter.isValid());
+                assertArrayEquals(keyOf(j), iter.key());
+                assertArrayEquals(valueOf(j), iter.value());
+                iter.next();
+            }
+            iter.seekToFirst();
         }
     }
 
@@ -97,14 +85,12 @@ public class BlockTest {
     void testBlockIteratorSeekToKey() {
         Block block = generateBlock();
         Block.BlockIterator iter = Block.BlockIterator.createAndSeekToKey(block, keyOf(0));
-
         for (int offset = 1; offset <= 5; offset++) {
             for (int i = 0; i < 100; i++) {
-                byte[] key = iter.key();
-                byte[] value = iter.value();
-                assertArrayEquals(keyOf(i), key);
-                assertArrayEquals(valueOf(i), value);
-                iter.seekToKey(String.format("key_%03d", i * 5 + offset).getBytes());
+                assertTrue(iter.isValid());
+                assertArrayEquals(keyOf(i), iter.key());
+                assertArrayEquals(valueOf(i), iter.value());
+                iter.seekToKey("key_%03d".formatted(i * 5 + offset).getBytes());
             }
             iter.seekToKey("k".getBytes());
         }
